2nd tester commit

--- a/html/main_page.html
+++ b/html/main_page.html
@@ -3,19 +3,45 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Electronics Store: Tech, PC Parts, All PC & More | Newegg</title>
+        <title>Electronics Store: Tech, PC Parts, All PC & More | Newegg (Replica)</title>
         <link rel="icon" href="../assets/Main/newegg-logo.png" type="image/x-icon">
-        <link rel="stylesheet" href="../css/main_page.css">
+        <!-- <link rel="stylesheet" href="../css/main_page.css"> -->
+        <style>
+            .header {
+                position: fixed;
+                top: 0;
+                right: 0;
+                left: 0;
+                width: 100%;
+                box-sizing: border-box;
+            }
+            .inner-box {
+                margin: 0;
+            }
+            .inner-main-header {
+                background-color: #002D6A;
+                align-items: center;
+                padding: 15px, 20px;
+                min-width: 0;
+            }
+            .inner-main-header-leftbox {
+                flex: 1 1 auto;
+            }
+        </style>
     </head>
     <body>
-        <header class="main-header">
+        <header class="header">
+            <div class="inner-box">
+                <div class="inner-main-header">
+                    <div class="inner-main-header-leftbox">
+                        <div class="logo">
+                            
+                        </div>
+
+                    </div>
+                </div>
             <div>
-                <img src="../assets/Main/Header/newegg-leftheader.png" title="Newegg.com - Computer Parts, Laptops, Electronics, HDTVs, Digital Cameras and More!" alt="Newegg Logo">
-            </div>
-            <div class="header-address">
-                <i>
-                    ::before
-                </i>
+
             </div>
         </header>
     </body>
