--- a/html/main_page.html
+++ b/html/main_page.html
@@ -5,44 +5,61 @@
         <meta charset="utf-8">
         <title>Electronics Store: Tech, PC Parts, All PC & More | Newegg (Replica)</title>
         <link rel="icon" href="../assets/Main/newegg-logo.png" type="image/x-icon">
-        <!-- <link rel="stylesheet" href="../css/main_page.css"> -->
-        <style>
-            .header {
-                position: fixed;
-                top: 0;
-                right: 0;
-                left: 0;
-                width: 100%;
-                box-sizing: border-box;
-            }
-            .inner-box {
-                margin: 0;
-            }
-            .inner-main-header {
-                background-color: #002D6A;
-                align-items: center;
-                padding: 15px, 20px;
-                min-width: 0;
-            }
-            .inner-main-header-leftbox {
-                flex: 1 1 auto;
-            }
-        </style>
+        <link rel="stylesheet" href="../css/main_page.css">
     </head>
-    <body>
-        <header class="header">
-            <div class="inner-box">
-                <div class="inner-main-header">
-                    <div class="inner-main-header-leftbox">
-                        <div class="logo">
-                            
-                        </div>
 
+    <body>
+        <header class="main-header">
+            <div class="main-bar">
+                <div class="top-bar">
+                    <div class="left-header">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                    </div>
+                    <div class="right-header">
+    
                     </div>
                 </div>
+
+                <div class="bottom-bar">
+                    <!-- Inline -->
+                    <div>
+                        <h3>Menu</h3>
+                    </div>
+
+                    <div>
+                        <h3>|</h3>
+                    </div>
+
+                    <div>
+                        <h3>Shell Shocker Deal</h3>
+                    </div>
+
+                    <div>
+                        <h3>PC Builder</h3>
+                    </div>
+
+                    <div>
+                        <h3>Clearance</h3>
+                    </div>
+
+                    <div>
+                        <h3>Best Sellers</h3>
+                    </div>
+
+                    <div>
+                        <h3>Shell Shocker Deal</h3>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <div>
+            <!-- Main container center -->
             <div>
 
             </div>
-        </header>
+        </div>
     </body>
 </html>
